# xcore_iot

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Jenkinsfile  LICENSE.txt  Makefile  README.md  README.rst  ai_deployment_framework.cmake  build.sh  build_binaries.sh  build_dist.sh  build_examples.sh  environment.yml  index.rst  install.sh  install_tools.sh  local_thread_mode_get_bits.patch  requirements.txt  run_tests.sh  settings.json  setup.py  test.sh  test_dist.sh  xs1_clock.patch
FreeRTOS-Plus-FAT/: CMakeLists.txt
FreeRTOS-Plus-TCP/: CMakeLists.txt
applications/ffd/: CMakeLists.txt  README.rst  ffd.cmake
applications/ffd/bsp_config/: CMakeLists.txt
applications/ffd/inference_engines/: CMakeLists.txt  inference_engines.cmake
applications/ffd/intent_model_runner/: CMakeLists.txt
applications/ffd/src/: FreeRTOSConfig.h  app_conf.h  app_conf_check.h  main.c
applications/stlp/: CMakeLists.txt  Makefile  README.rst  stlp.cmake  stlp_dev.cmake
applications/stlp/audio_pipeline/: audio_pipeline.cmake
applications/stlp/bsp_config/: bsp_config.cmake
applications/stlp/filesystem_support/: create_fs.bat  create_fs.sh  flash_image.bat  flash_image.sh
applications/stlp/src/: FreeRTOSConfig.h  app_conf.h  app_conf_check.h  config.xscope  main.c
examples/: CMakeLists.txt  examples.cmake  launch_app.sh
examples/app_freertos_explorer_board/: .cproject  .project  CMakeLists.txt  example_host.sh
examples/app_freertos_explorer_board/Python/: mqtt_echo.py
examples/app_freertos_explorer_board/filesystem_support/: create_fs.sh  gen_demo_certs.sh
examples/app_freertos_explorer_board/src/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  app_conf.h  config.xscope  ff_appconf.h  main.c
examples/app_freertos_explorer_board2/: .cproject  .project  CMakeLists.txt  README.rst  example_host.sh
examples/app_freertos_explorer_board2/src/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  app_conf.h  main.c
examples/app_freertos_filesystem/: .cproject  .project  CMakeLists.txt  create_fs.sh  flash_image.sh
examples/app_freertos_filesystem/bitstream_src/: bitstream.c  bitstream.h  (+1 more)
examples/app_freertos_independent_tiles/: .cproject  .project  CMakeLists.txt  Makefile
examples/app_freertos_intertile/: .cproject  .project  CMakeLists.txt
examples/app_freertos_micarray_board/: .cproject  .project  CMakeLists.txt  Makefile  README.rst  rebuild.sh  test.sh
examples/app_freertos_micarray_board2/: .cproject  .project  CMakeLists.txt  Makefile  README.rst  config.xscope  test.sh  wscript
examples/app_freertos_msgbuf_intertile/: .cproject  .project  CMakeLists.txt  LICENSE.txt  xscope.xmt.gtkw
examples/app_freertos_slicekit/: .cproject  .project  freertos_trace.sh
examples/app_freertos_wfm200/: .cproject  .project  CMakeLists.txt  Makefile  flash_wfmfw.sh
examples/app_freertos_xcoreai_test/: .cproject  .project  CMakeLists.txt
examples/app_iot_aws/: CMakeLists.txt  README.md
examples/bare-metal/: CMakeLists.txt
examples/freertos/: CMakeLists.txt
modules/: CMakeLists.txt  modules.cmake
modules/FreeRTOS-Plus-FAT/: CMakeLists.txt
modules/FreeRTOS-Plus-TCP/: CMakeLists.txt
modules/aif/: CMakeLists.txt  ai_framework.cmake
modules/device_memory_support/: CMakeLists.txt
modules/drivers/: drivers.cmake
modules/experimental/: CMakeLists.txt
modules/hil/: CMakeLists.txt  hil.cmake
modules/inferencing/: CMakeLists.txt
modules/legacy_compat/: CMakeLists.txt  debug_print.h  xassert.h
modules/lib_dsp/: CMakeLists.txt
modules/lib_locks/: CMakeLists.txt
modules/lib_logging/: CMakeLists.txt
modules/lib_otpinfo/: CMakeLists.txt
modules/lib_random/: CMakeLists.txt
modules/lib_rtos_support/: CMakeLists.txt
modules/lib_sdram/: CMakeLists.txt
modules/lib_soc/: .cproject  .project  CMakeLists.txt
modules/lib_src/: CMakeLists.txt
modules/lib_xs3_math/: CMakeLists.txt
modules/model_runner/: model_runner.cmake
modules/multitile_support/: CMakeLists.txt  platform.h  soc_intertile_channel.c  tile_map.xc  tile_map_defaults.c
modules/rtos/: CMakeLists.txt  rtos.cmake
modules/sample_rate_conversion/: CMakeLists.txt
modules/utils/: CMakeLists.txt
modules/xscope_fileio/: CMakeLists.txt  xscope_fileio.cmake
python_bindings/: CMakeLists.txt  build.sh
python_bindings/src/: xcore_interpreter_c.cpp
test/: CMakeLists.txt  build_examples.sh  requirements.txt  test_notebooks.sh  test_tflite2xcore.py  test_xcore_interpreters.py  tests.cmake  verify_python_install.py
test/ai/: README.rst  test_notebooks.sh  test_scripts.sh
test/examples/: README.rst  run_bare_metal_vww_tests.sh  run_examples_tests.sh  run_freertos_cifar10_tests.sh  run_freertos_dispatcher_tests.sh  run_freertos_explorer_board_tests.sh  run_freertos_getting_started_tests.sh  run_freertos_l2_cache_tests.sh  run_freertos_tracealyzer_tests.sh
test/hil/: CMakeLists.txt  README.rst  build_hil_tests.sh  build_lib_i2c_tests.sh  build_lib_i2s_tests.sh  build_lib_spi_tests.sh  build_lib_uart_tests.sh  conftest.py  run_tests.sh  test_verify_i2c_results.py  test_verify_i2s_results.py  test_verify_results.py  test_verify_spi_results.py
test/rtos_drivers/: CMakeLists.txt  Makefile  README.rst  XCORE-AI-EXPLORER.xn  build_rtos_driver_tests.sh  run_rtos_driver_tests.sh  run_tests.sh  test_verify_gpio_results.py  test_verify_i2c_results.py  test_verify_i2s_results.py  test_verify_intertile_results.py  test_verify_mic_array_results.py  test_verify_qspi_flash_results.py  test_verify_swmem_results.py
test/rtos_drivers_adv/: CMakeLists.txt  Makefile  README.rst  build_and_run_tests.sh  run_tests.sh  test_verify_results.py
test/rtos_services/: device_control_functional.sh
test/usb/: README.rst
test/xcore_all_ops_firmware/: README.md  build.sh
xcore_firmware/: CMakeLists.txt  build.sh  config.xscope
xcore_firmware/src/: inference_engine.cc  inference_engine.h  main.xc  main_cmdline.c  main_xscope.c  model_runner.cc  model_runner.h  test_ops_resolver.cc
xcore_interpreters/xcore_firmware/: CMakeLists.txt  config.xscope
(+2891 files in other folders)
