
## Add HIL tests
add_subdirectory(hil/lib_i2c)
add_subdirectory(hil/lib_i2s)
# add_subdirectory(hil/lib_qspi_io)
add_subdirectory(hil/lib_spi)

## Add rtos drivers system tests
# add_subdirectory(rtos_drivers/clock_control)
# add_subdirectory(rtos_drivers/hil)
# add_subdirectory(rtos_drivers/hil_add)
# add_subdirectory(rtos_drivers/usb)
# add_subdirectory(rtos_drivers/wifi)
